--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en-US" id="index">
+<html lang="en-US" id="000" class="hip sea-wet sea-blood sea-foam">
 <meta charset="utf-8">
-<title>index</title>
-<meta name=viewport content="width=device-width, initial-scale=1">
+<title>humming sound</title>
+<meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
-<meta name=theme-color content="#100">
-<meta name=description content="...">
-<link rel="stylesheet" href="dawn.css" media="(prefers-color-scheme:light)">
-<link rel="stylesheet" href="dusk.css" media="(prefers-color-scheme:dark)">
-<link rel="stylesheet" href="index.css">
+<meta name=theme-color content="#bae">
+<meta name=description content="humming planet frequency guide">
+<link rel="stylesheet" href="hue.css" media=(color)>
+<link rel="stylesheet" href="hum.css" media="all">
 <link rel="license" href="UNLICENSE.txt">
-<link rel="icon" href="icon.svg">
 
-<main aria-label="index">
-  <header>
-    <a href="#index"><mark>index</mark></a>
-  </header>
-  <menu>
-    <li><a></a>
-    <li><a></a>
-    <li><a></a>
-  </menu>
-  <footer>
-    <a rel="home" href="..">home</a>
-    <a rel="help" href="../templates">templates</a>
-  </footer>
+<main>
+  <h1 class="lip">humming sound.</h1>
+  <p class="lip">
+    when venus is coming eye hear birds humming.
+    when mars is coming eye hear beeeeeeeeeep.
+    when pluto is coming eye hear ultraviolet.
+    when neptune is coming eye hear exciting harmony.
+    when uranus is coming eye hear amplifier vibes.
+    when jupiter is coming eye hear high hopes.
+    when mercury is coming eye twist words too twickly.
+    when saturn is coming eye hear raw ringing.
+    when luna is comming eye hear feeling and food.
+  </p>
 </main>
