--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" id="000" class="hip sea-wet sea-blood sea-foam">
+<html lang="en-US" id="000" class="hip sea-wet sea-bleed sea-glow">
 <meta charset="utf-8">
 <title>humming sound</title>
 <meta name=viewport content="width=device-width">
@@ -11,7 +11,7 @@
 <link rel="license" href="UNLICENSE.txt">
 
 <main>
-  <h1 class="lip">humming sound.</h1>
+  <h1 class="lip sea-bleed sea-gel">humming sound.</h1>
   <p class="lip">
     when venus is coming eye hear birds humming.
     when mars is coming eye hear beeeeeeeeeep.
